# crowd-test

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crowdtest/: __init__.py  cli.py  clickfix.py  crew.py  persona.py  probe.py  report.py  results.py  runner.py  tribunal.py  verify.py
crowdtest/personas/: amara-first-timer.yaml  dana-distracted-parent.yaml  harold-the-senior.yaml  kai-keyboard-only.yaml  mai-impatient-shopper.yaml  penny-bargain-hunter.yaml  rex-chaos-monkey.yaml  sam-speedrunner.yaml  viktor-privacy-hawk.yaml  yuki-non-native.yaml
demo-report/: report.html  report.md
docs/: LAUNCH.md
examples/: sample-report.html  sample-report.md
skills/crowd-test/: SKILL.md
tests/: test_clickfix.py  test_crew.py  test_mob.py  test_persona.py  test_probe.py  test_report.py  test_results.py  test_tribunal.py  test_verify.py
